manifests/statefullset_db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefullset-db
spec:
  selector:
    matchLabels:
      app: nodejs-crud-db
  serviceName: nodejs-crud-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs-crud-db
    spec:
      containers:
      - name: mongodb
        image: PROJECT-DB/IMAGE
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
