manifests/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-crud-db-svc
  namespace: my-namespace
spec:
  type: LoadBalancer
  selector:
    app: nodejs-crud-db
  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 30007
